Status operator to update status of resources
This operator monitors the status of
resources like pods, services, deployments,
daemonsets, configmaps etc. and updates the
status in the CR accordingly.

Issue-ID: MULTICLOUD-1047
Signed-off-by: Srivahni Chivukula <srivahni.chivukula@intel.com>
Change-Id: I7d92584a44c8add2df69f2985140a55b460ac037

--- a/src/monitor/deploy/crds/k8splugin_v1alpha1_resourcebundlestate_crd.yaml
+++ b/src/monitor/deploy/crds/k8splugin_v1alpha1_resourcebundlestate_crd.yaml
@@ -58,11 +58,46 @@ spec:
               items:
                 type: object
               type: array
+            configMapStatuses:
+              items:
+                type: object
+              type: array
+            deploymentStatuses:
+              items:
+                type: object
+              type: array
+            secretStatuses:
+              items:
+                type: object
+              type: array
+            daemonSetStatuses:
+              items:
+                type: object
+              type: array
+            ingressStatuses:
+              items:
+                type: object
+              type: array
+            jobStatuses:
+              items:
+                type: object
+              type: array
+            statefulSetStatuses:
+              items:
+                type: object
+              type: array
           required:
           - ready
           - resourceCount
           - podStatuses
           - serviceStatuses
+          - configMapStatuses
+          - deploymentStatuses
+          - secretStatuses
+          - daemonSetStatuses
+          - ingressStatuses
+          - jobStatuses
+          - statefulSetStatuses
           type: object
   version: v1alpha1
   versions:
