--- a/src/monitor/deploy/crds/k8splugin_v1alpha1_resourcebundlestate_cr.yaml
+++ b/src/monitor/deploy/crds/k8splugin_v1alpha1_resourcebundlestate_cr.yaml
@@ -2,12 +2,11 @@ apiVersion: k8splugin.io/v1alpha1
 kind: ResourceBundleState
 metadata:
   name: example-resourcebundlestate
-  namespace: test
   labels:
-    "k8splugin.io/rb-inst-id": "bionic-beaver"
+    "emco/deployment-id": "bionic-beaver"
 spec:
   selector:
     matchLabels:
-      "k8splugin.io/rb-inst-id": "bionic-beaver"
+      "emco/deployment-id": "bionic-beaver"
 status:
   ready: false
