Install criproxy binary in /usr/local/bin instead of /tmp. Issue-ID: MULTICLOUD-1051
Signed-off-by: Eric Tang <qcorba@gmail.com>
Change-Id: I96443ee539de0e2a18011148f86f97e70634cae3
Signed-off-by: Eric Tang <qcorba@gmail.com>
(cherry picked from commit 86c469873be784ddee0cc2797113c98bd80dc290)

--- a/kud/deployment_infra/playbooks/configure-virtlet.yml
+++ b/kud/deployment_infra/playbooks/configure-virtlet.yml
@@ -207,11 +207,13 @@
           chdir: "{{ criproxy_dest }}"
       when: criproxy_source_type == "source"
     - name: download CRIproxy package
+      become: yes
       get_url:
         url: "{{ criproxy_url }}"
         dest: "{{ criproxy_dest }}/criproxy"
       when: criproxy_source_type == "binary"
     - name: set criproxy execution permissions
+      become: yes
       file:
         path: "{{ criproxy_dest }}/criproxy"
         mode: "+x"
