Move cluster management into its own microservice
Split out the cluster provider and cluster APIs
and packages into a separate microservice to align
with the architecture.

Issue-ID: MULTICLOUD-1029
Signed-off-by: Eric Multanen <eric.w.multanen@intel.com>
Change-Id: I08f357b5a488004a2389b72a178ae33e101d1540

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ build:
 	$(MAKE) -C k8splugin build
 	$(MAKE) -C orchestrator build
 	$(MAKE) -C ncm build
+	$(MAKE) -C clm build
 	$(MAKE) -C dcm build
 	$(MAKE) -C rsync build
 	$(MAKE) -C ovnaction build
@@ -12,6 +13,7 @@ deploy:
 	$(MAKE) -C k8splugin deploy
 	$(MAKE) -C orchestrator deploy
 	$(MAKE) -C ncm deploy
+	$(MAKE) -C clm deploy
 	$(MAKE) -C dcm deploy
 	$(MAKE) -C rsync deploy
 	$(MAKE) -C ovnaction deploy
@@ -21,6 +23,7 @@ all:
 	$(MAKE) -C k8splugin all
 	$(MAKE) -C orchestrator all
 	$(MAKE) -C ncm all
+	$(MAKE) -C clm all
 	$(MAKE) -C dcm all
 	$(MAKE) -C rsync all
 	$(MAKE) -C ovnaction all
@@ -30,6 +33,7 @@ clean:
 	$(MAKE) -C k8splugin clean
 	$(MAKE) -C orchestrator clean
 	$(MAKE) -C ncm clean
+	$(MAKE) -C clm clean
 	$(MAKE) -C dcm clean
 	$(MAKE) -C rsync clean
 	$(MAKE) -C ovnaction clean
