Create OVN network action controller from ncm
Split out part of ncm microservice to act as the
Onv4k8s network action controller for the orchestrator.
No code changes really - just moving around to fit the
architectural plan.

Issue-ID: MULTICLOUD-1029
Signed-off-by: Eric Multanen <eric.w.multanen@intel.com>
Change-Id: I17292ac72d041050269f05fc4a0c2a6ca741aeb5

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,7 @@ build:
 	$(MAKE) -C ncm build
 	$(MAKE) -C dcm build
 	$(MAKE) -C rsync build
+	$(MAKE) -C ovnaction build
 
 deploy:
 	$(MAKE) -C monitor deploy
@@ -13,6 +14,7 @@ deploy:
 	$(MAKE) -C ncm deploy
 	$(MAKE) -C dcm deploy
 	$(MAKE) -C rsync deploy
+	$(MAKE) -C ovnaction deploy
 
 all:
 	$(MAKE) -C monitor all
@@ -21,6 +23,7 @@ all:
 	$(MAKE) -C ncm all
 	$(MAKE) -C dcm all
 	$(MAKE) -C rsync all
+	$(MAKE) -C ovnaction all
 
 clean:
 	$(MAKE) -C monitor clean
@@ -29,3 +32,4 @@ clean:
 	$(MAKE) -C ncm clean
 	$(MAKE) -C dcm clean
 	$(MAKE) -C rsync clean
+	$(MAKE) -C ovnaction clean
