[DEBUG] verify only optane plugin
Issue-ID: MULTICLOUD-1046
Signed-off-by: Chen, Tingjie <tingjie.chen@intel.com>
Change-Id: I4614ed27a7a9caeeb3762e3087774899b8493732
Signed-off-by: Chen, Tingjie <tingjie.chen@intel.com>

--- a/kud/deployment_infra/images/pmem-csi-direct.yaml
+++ b/kud/deployment_infra/images/pmem-csi-direct.yaml
@@ -370,6 +370,6 @@ metadata:
 spec:
   attachRequired: false
   podInfoOnMount: true
-  #volumeLifecycleModes:
-  #- Persistent
-  #- Ephemeral
+  volumeLifecycleModes:
+  - Persistent
+  - Ephemeral
