--- a/kud/deployment_infra/images/pmem-csi-lvm.yaml
+++ b/kud/deployment_infra/images/pmem-csi-lvm.yaml
@@ -396,6 +396,6 @@ metadata:
 spec:
   attachRequired: false
   podInfoOnMount: true
-  #volumeLifecycleModes:
-  #- Persistent
-  #- Ephemeral
+  volumeLifecycleModes:
+  - Persistent
+  - Ephemeral
