--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ envlist = bashate
 [testenv]
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 usedevelop = False
-install_command = pip install {opts} {packages}
+install_command = pip install --no-cache-dir {opts} {packages}
 
 [testenv:bashate]
 deps =
