--- a/kud/demo/composite-firewall/packetgen/values.yaml
+++ b/kud/demo/composite-firewall/packetgen/values.yaml
@@ -1,4 +1,4 @@
-# Default values for firewall.
+# Default values for packetgen.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -12,8 +12,16 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
+service:
+#serivce port value for packetgen service
+  type: NodePort
+  ports:
+    port: 2831
+    nodePort: 30831
+
 resources:
-  memory: 4Gi
+  limits:
+    memory: 4Gi
 
 #global vars for parent and subcharts.
 global:
@@ -21,11 +29,8 @@ global:
   #Networks
   unprotectedNetworkName: unprotected-private-net
   protectedPrivateNetCidr: 192.168.10.0/24
-  protectedPrivateNetGw: 192.168.10.1/24
 
-  onapPrivateNetworkName: onap-private-net
-  onapPrivateNetCidr: 10.10.20.0/24
-  onapPrivateNetGw: 10.10.20.1/24
+  emcoPrivateNetworkName: emco-private-net
 
   protectedNetworkName: protected-private-net
   protectedNetCidr: 192.168.20.0/24
@@ -35,17 +40,18 @@ global:
   #vFirewall container
   vfwPrivateIp0: 192.168.10.3
   vfwPrivateIp1: 192.168.20.2
-  vfwPrivateIp2: 10.10.100.3
+  vfwPrivateIp2: 10.10.20.3
+
   #Packetgen container
-  vpgPrivateIp0: 192.168.10.2
-  vpgPrivateIp1: 10.0.100.2
+  vpgPrivateIp0: 192.168.10.200
+  vpgPrivateIp1: 10.10.20.200
+
   #Sink container
   vsnPrivateIp0: 192.168.20.3
-  vsnPrivateIp1: 10.10.100.4
+  vsnPrivateIp1: 10.10.20.4
 
   #########
   ovnMultusNetworkName: ovn-networkobj
   demoArtifactsVersion: 1.5.0
   dcaeCollectorIp: 10.0.4.1
   dcaeCollectorPort: 8081
-
