--- a/deployments/kubernetes/onap4k8s.yaml
+++ b/deployments/kubernetes/onap4k8s.yaml
@@ -31,6 +31,7 @@ spec:
   ports:
   - name: http
     port: 9015
+    nodePort: 31298
     protocol: TCP
     targetPort: 9015
 
@@ -102,6 +103,7 @@ spec:
   ports:
   - name: http
     port: 9031
+    nodePort: 32737
     protocol: TCP
     targetPort: 9031
 
@@ -246,6 +248,7 @@ spec:
     targetPort: 9053
   - name: http
     port: 9051
+    nodePort: 31181
     protocol: TCP
     targetPort: 9051
 
@@ -318,6 +321,7 @@ spec:
   ports:
   - name: http
     port: 9061
+    nodePort: 31856
     protocol: TCP
     targetPort: 9061
 
