Integrate M3DB and prometheus & enable remoteWrite
In this patch, added the correct helm charts for
M3DB, M3DB operator,and verified by deploying them
on a 3-node k8s clusters. After deployment, we
enable the remote write from prometheus to M3DB.
So that M3Db can be used as a long term storage
solution for metrics collected by prometheus.

Signed-off-by: Rajamohan Raj <rajamohan.raj@intel.com>
Issue-ID: MULTICLOUD-1098
Change-Id: I9ecba8c1341d71047685b10fc46676b1df2ee5f8

--- a/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/values.yaml
+++ b/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/values.yaml
@@ -474,7 +474,7 @@ alertmanager:
 ## Using default values from https://github.com/helm/charts/blob/master/stable/grafana/values.yaml
 ##
 grafana:
-  enabled: false
+  enabled: true
 
   ## Deploy default dashboards.
   ##
@@ -1723,15 +1723,21 @@ prometheus:
     ## The remote_read spec configuration for Prometheus.
     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#remotereadspec
     remoteRead: []
-    # - url: http://remote1/read
+    # # - url: http://remote1/read
+    #   - url: "http://m3coordinator-m3db-cluster.training.svc.cluster.local:7201/api/v1/prom/remote/read"
+    #     read_recent: true
 
     ## The remote_write spec configuration for Prometheus.
     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#remotewritespec
-    remoteWrite: []
+    remoteWrite: 
     # - url: http://remote1/push
+      - url: "http://m3coordinator-m3db-cluster.training.svc.cluster.local:7201/api/v1/prom/remote/write"
+        writeRelabelConfigs:
+          - targetLabel: metrics_storage
+            replacement: m3db_remote
 
     ## Enable/Disable Grafana dashboards provisioning for prometheus remote write feature
-    remoteWriteDashboards: false
+    remoteWriteDashboards: true
 
     ## Resource limits & requests
     ##
@@ -1763,7 +1769,13 @@ prometheus:
     ## The scrape configuraiton example below will find master nodes, provided they have the name .*mst.*, relabel the
     ## port to 2379 and allow etcd scraping provided it is running on all Kubernetes master nodes
     ##
-    additionalScrapeConfigs: []
+    additionalScrapeConfigs: 
+      - job_name: 'm3db'
+        static_configs:
+          - targets: ['m3db-cluster-rep0-0.m3dbnode-m3db-cluster.training.svc.cluster.local:9004','m3db-cluster-rep1-0.m3dbnode-m3db-cluster.training.svc.cluster.local:9004', 'm3db-cluster-rep2-0.m3dbnode-m3db-cluster.training.svc.cluster.local:9004']
+      - job_name: 'm3coordinator'
+        static_configs:
+          - targets: ['m3db-cluster-rep0-0.m3dbnode-m3db-cluster.training.svc.cluster.local:7203']
     # - job_name: kube-etcd
     #   kubernetes_sd_configs:
     #     - role: node
