--- a/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/charts/grafana/values.yaml
+++ b/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/charts/grafana/values.yaml
@@ -116,6 +116,7 @@ podPortName: grafana
 service:
   type: NodePort
   port: 80
+  nodePort: 30092
   targetPort: 3000
     # targetPort: 4181 To be used with a proxy extraContainer
   annotations: {}
