Temporarily comment-out monitor module build in src/Makefile
Also removes 'replace' directives in monitor/go.mod that cause
the build to fail with Go 1.14.4

The CI build currently fails with the change to monitor/go.mod
that is why the src/Makefile has the monitor build commented-out.

When the monitor build failure is resolved, the commented-out
monitor build can be restored.

Issue-ID: MULTICLOUD-1106
Signed-off-by: Larry Sachs <larry.j.sachs@intel.com>
Change-Id: Ic463129a0a608b4be74245ad4abe89c8c31bfd66

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 build:
-	$(MAKE) -C monitor build
+#	$(MAKE) -C monitor build
 	$(MAKE) -C k8splugin build
 	$(MAKE) -C orchestrator build
 	$(MAKE) -C ncm build
@@ -9,7 +9,7 @@ build:
 	$(MAKE) -C ovnaction build
 
 deploy:
-	$(MAKE) -C monitor deploy
+#	$(MAKE) -C monitor deploy
 	$(MAKE) -C k8splugin deploy
 	$(MAKE) -C orchestrator deploy
 	$(MAKE) -C ncm deploy
@@ -19,7 +19,7 @@ deploy:
 	$(MAKE) -C ovnaction deploy
 
 all:
-	$(MAKE) -C monitor all
+#	$(MAKE) -C monitor all
 	$(MAKE) -C k8splugin all
 	$(MAKE) -C orchestrator all
 	$(MAKE) -C ncm all
