Adds composite app status update and query
This patch provides the basic framework for supporting
monitoring of composite application resources in clusters.

1. Updates to the monitor files for use with v2.
2. Invokes the Watcher process per cluster/app when the
   app is instantiated.
3. Adds a ResourceBundleState CR resource to the cluster/app
   so that monitor will be able to update status to it.
4. Watcher updates appropriate appcontext status object
   when updates are made in clusters by monitor
5. Update appcontext library to define a status handle
   and object at the app/cluster level
6. Labels resources with an appropriate tracking label
   to coordinate with the ResourceBundleState CR

Issue-ID: MULTICLOUD-1042
Signed-off-by: Eric Multanen <eric.w.multanen@intel.com>
Change-Id: If007c1fd86ca7a65bb941d1776cfd2d3afed766b

--- a/src/monitor/deploy/operator.yaml
+++ b/src/monitor/deploy/operator.yaml
@@ -3,30 +3,28 @@ kind: Deployment
 metadata:
   name: monitor
   labels:
-    "emco/deployment-id": "bionic-beaver"
+    "emco/deployment-id": "monitor"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      "emco/deployment-id": "bionic-beaver"
+      "emco/deployment-id": "monitor"
   template:
     metadata:
       labels:
-        "emco/deployment-id": "bionic-beaver"
+        "emco/deployment-id": "monitor"
     spec:
       serviceAccountName: monitor
       containers:
         - name: monitor
           # Replace this with the built image name
-          image: k8splugin.io/monitor:latest
+          image: ewmduck/monitor:latest
           command:
-          - monitor
+          - /opt/monitor/monitor
           imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+              value: ""
             - name: POD_NAME
               valueFrom:
                 fieldRef:
