--- a/src/monitor/deploy/operator.yaml
+++ b/src/monitor/deploy/operator.yaml
@@ -18,15 +18,13 @@ spec:
       containers:
         - name: monitor
           # Replace this with the built image name
-          image: k8splugin.io/monitor:latest
+          image: ewmduck/monitor:latest
           command:
-          - monitor
+          - /opt/monitor/monitor
           imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+              value: ""
             - name: POD_NAME
               valueFrom:
                 fieldRef:
