Update MultiCloud committer info
Change-Id: Iacb286298c9a1ab2b84ef0d09140cdf5f2cc9f9b
Issue-ID: MULTICLOUD-1115
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -28,55 +28,29 @@ meetings:
       repeats: 'weekly'
       time: '13:00 UTC'
 repositories:
-    - 'multicloud-framework'
-    - 'multicloud-openstack'
-    - 'multicloud-openstack-vmware'
-    - 'multicloud-openstack-windriver'
-    - 'multicloud-azure'
-    - 'multicloud-k8s'
-    - 'multicloud-oom'
+    - 'multicloud/k8s'
 committers:
     - <<: *onap_multicloud_ptl
-    - name: 'Anbing Zhang'
-      email: 'zhanganbing@chinamobile.com'
-      company: 'China Mobile'
-      id: 'zhangab'
-      timezone: 'Asia/Shanghai'
+    - name: 'Eric Multanen'
+      email: 'eric.w.multanen@intel.com'
+      company: 'Intel'
+      id: 'ewmulta'
+      timezone: 'America/Los_Angeles'
     - name: 'Xinhui Li'
       email: 'lxinhui@vmware.com'
       id: 'xinhuili'
       company: 'VMware'
-      timezone: 'Asia/Shanghai'
-    - name: 'Bin Hu'
-      email: 'bh526r@att.com'
-      company: 'ATT'
-      id: 'bh526r'
-      timezone: 'America/Los_Angeles'
-    - name: 'Ethan Lynn'
-      email: 'ethanlynnl@vmware.com'
-      company: 'VMWare'
-      id: 'ethanlynnl'
       timezone: 'Asia/Shanghai'
     - name: 'Huang Haibin'
       email: 'haibin.huang@intel.com'
       company: 'Intel'
       id: 'haibin'
       timezone: 'Asia/Shanghai'
-    - name: 'Sudhakar Reddy'
-      email: 'Sudhakar.Reddy@amdocs.com'
-      company: 'Amdocs'
-      id: 'SudhakarReddy'
-      timezone: 'Asia/Kolkata'
     - name: 'Xiaohua Zhang'
       email: 'Xiaohua.Zhang@windriver.com'
       company: 'Wind River'
       id: 'Xiaohua626'
       timezone: 'Asia/Shanghai'
-    - name: 'Kiran Kamineni'
-      email: 'kiran.k.kamineni@intel.com'
-      company: 'Intel'
-      id: 'kirankamineni'
-      timezone: 'America/Los_Angeles'
     - name: 'Ritu Sood'
       email: 'ritu.sood@intel.com'
       company: 'Intel'
@@ -118,3 +92,15 @@ tsc:
               - 'Liexiang Yue'
               - 'Ritu Sood'
           link: 'https://lists.onap.org/g/onap-discuss/message/18280'
+        - type: 'Addition'
+          name:
+              - 'Eric Multanen'
+          link: 'https://lists.onap.org/g/onap-tsc/message/6676'
+        - type: 'Remove'
+          name:
+              - 'Anbing Zhang'
+              - 'Bin Hu'
+              - 'Kiran Kamineni'
+              - 'Ethan Lynn'
+              - 'Sudhakar Reddy'
+          link: 'https://lists.onap.org/g/onap-tsc/message/6676'
