--- a/kud/tests/vnfs/comp-app/collection/operators/helm/operator/charts/etcd-operator/values.yaml
+++ b/kud/tests/vnfs/comp-app/collection/operators/helm/operator/charts/etcd-operator/values.yaml
@@ -37,7 +37,7 @@ deployments:
 # you could use `helm template --values <values.yaml> --name release_name ... `
 # and create the resources yourself to deploy on your cluster later
 customResources:
-  createEtcdClusterCRD: false
+  createEtcdClusterCRD: true
   createBackupCRD: false
   createRestoreCRD: false
 
