Update resource name for docker images
Change the image name to stable for
helm chart and developer scripts

Issue-ID: MULTICLOUD-1065
Signed-off-by: Ritu Sood <ritu.sood@intel.com>
Change-Id: I11e1773949279c7c05100d2988af9ad3aacbd43d

--- a/deployments/helm/v2/onap4k8s/ovnaction/values.yaml
+++ b/deployments/helm/v2/onap4k8s/ovnaction/values.yaml
@@ -23,8 +23,8 @@ global:
 #################################################################
 # application image
 repository: registry.hub.docker.com
-image: rtsood/emco:0.0.1
-pullPolicy: IfNotPresent
+image: rtsood/emco:stable
+pullPolicy: Always
 command: "/opt/emco/entrypoint"
 args: "ovnaction"
 workingDir: /opt/emco
