--- a/deployments/helm/v2/onap4k8s/orchestrator/values.yaml
+++ b/deployments/helm/v2/onap4k8s/orchestrator/values.yaml
@@ -23,8 +23,8 @@ global:
 #################################################################
 # application image
 repository: registry.hub.docker.com
-image: rtsood/emco:0.0.1 
-pullPolicy: IfNotPresent
+image: rtsood/emco:stable
+pullPolicy: Always
 command: "/opt/emco/entrypoint"
 args: "orchestrator"
 workingDir: /opt/emco
