Add StateInfo structure synced resources
Add a StateInfo structure to the Cluster and
Deployment-Intent-Group resources to keep track of
the lifecycle state of these resources.  Moved the
appcontext id that was being kept into this structure
as well.  Enabled the approve state (and API) for
the deployment intent group.

Issue-ID: MULTICLOUD-1042
Signed-off-by: Eric Multanen <eric.w.multanen@intel.com>
Change-Id: I36602d8a0658d9d6d37b8799f9a372a7d1042496

--- a/docs/emco_apis.yaml
+++ b/docs/emco_apis.yaml
@@ -1284,7 +1284,7 @@ paths:
       requestBody:
         content: {}
 
-  /projects/{project-name}/composite-apps/{composite-app-name}/{composite-app-version}/deployment-intent-groups/{deployment-intent-group-name}/destroy:
+  /projects/{project-name}/composite-apps/{composite-app-name}/{composite-app-version}/deployment-intent-groups/{deployment-intent-group-name}/terminate:
     parameters:
       - $ref: '#/components/parameters/projectName'
       - $ref: '#/components/parameters/compositeAppName'
@@ -1293,9 +1293,9 @@ paths:
     post:
       tags:
         - Deployment Lifecycle
-      summary: Destroy a Deployment
-      description: Destroy a  Deployment
-      operationId: destroyDeploymentIntentGroup
+      summary: Terminate a Deployment
+      description: Terminate a  Deployment
+      operationId: terminateDeploymentIntentGroup
       responses:
         '200':
           description: Success
